code refactoring and docker update

--- a/api/Dockerfile.backend
+++ b/api/Dockerfile.backend
@@ -2,4 +2,12 @@ FROM node:lts-slim
 
 WORKDIR /app
 
+# COPY package*.json ./
+
+# RUN npm install
+
+# COPY . .
+
+# EXPOSE 8080
+
 CMD npm ci; npm start
