--- a/www/Dockerfile.frontend
+++ b/www/Dockerfile.frontend
@@ -2,7 +2,11 @@ FROM node:lts-slim
 
 WORKDIR /app
 
-VOLUME /app
+# COPY package*.json ./
+# VOLUME /app
+# RUN npm install
+
+# COPY . .
 
 EXPOSE 3000
 
